syntax = "proto3";

package subscription_charge;

enum SubscriptionChargeContractStatus {
  SUBSCRIPTION_CHARGE_CONTRACT_STATUS_IN_PROGRESS = 0;
  SUBSCRIPTION_CHARGE_CONTRACT_STATUS_APPROVED = 1;
  SUBSCRIPTION_CHARGE_CONTRACT_STATUS_REJECTED = 2;
}

enum SubscriptionChargeStatus {
  SUBSCRIPTION_CHARGE_STATUS_IN_PROGRESS = 0;
  SUBSCRIPTION_CHARGE_STATUS_FINALIZED = 1;
}

message CreateSubscriptionChargeReq {
  string pinetIdToken = 1;
  string pinetUserId = 2;
  string membershipOrgId = 3;
  string subscriptionInstanceId = 4;
  int64 amount = 5;
  int32 fraction = 6;
  string currencyCode = 7;
  string description = 8;
}

message UpdateSubscriptionChargeReq {
  string subscriptionChargeId = 1;
  string pinetIdToken = 2;
  string pinetUserId = 3;
  string membershipOrgId = 4;
  int64 amount = 5;
  int32 fraction = 6;
  string currencyCode = 7;
  string description = 8;
}

message FinalizeSubscriptionChargeReq {
  string subscriptionChargeId = 1;
  int64 amount = 2;
  int32 fraction = 3;
  string currencyCode = 4;
}

message GetSubscriptionChargeContractStatusReq {
  string subscriptionChargeContractId = 1;
}

message SubscriptionChargeContractStatusRes {
  string subscriptionChargeId = 1;
  string subscriptionChargeContractId = 2;
  SubscriptionChargeContractStatus status = 3;
}

message GetSubscriptionChargeStatusReq {
  string subscriptionChargeId = 1;
}

message SubscriptionChargeStatusRes {
  string subscriptionChargeId = 1;
  SubscriptionChargeStatus status = 2;
}


